# CopilotKit

./: pnpm-lock.yaml
.github/workflows/: test_smoke-starter.yml
examples/showcases/banking/: package.json
examples/showcases/deep-agents-job-search/agent/: pyproject.toml
examples/showcases/generative-ui-playground/: package.json
examples/v2/react-router/: package.json
showcase/eval-webhook/: package.json
showcase/harness/: package.json
showcase/integrations/ag2/: requirements.txt
showcase/integrations/crewai-crews/: package-lock.json
showcase/integrations/google-adk/: package-lock.json
showcase/integrations/langgraph-fastapi/: package-lock.json  requirements.txt
showcase/integrations/langgraph-python/: package-lock.json  requirements.txt
showcase/integrations/langgraph-typescript/: package-lock.json
showcase/integrations/langroid/: package-lock.json
showcase/integrations/llamaindex/: package-lock.json  requirements.txt
showcase/integrations/mastra/: package-lock.json  package.json
showcase/integrations/ms-agent-dotnet/: package-lock.json
showcase/integrations/ms-agent-harness-dotnet/: package-lock.json
showcase/integrations/ms-agent-python/: package-lock.json  requirements.txt
showcase/integrations/pydantic-ai/: package-lock.json  requirements.txt
showcase/integrations/spring-ai/: package-lock.json
showcase/integrations/strands/: package-lock.json  requirements.txt
showcase/shell/: package-lock.json  package.json
showcase/shell-dashboard/: package-lock.json  package.json
showcase/shell-docs/: package-lock.json  package.json
(+16 files in other folders)
