[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "copilotkit>=0.1.76",
  "deepagents>=0.3.5",
  "fastapi>=0.115.14",
  "langchain>=1.3.11",
  "langchain-openai>=1.3.3",
  "pypdf>=6.14.2",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.21",
  "tavily-python>=0.7.19",
  "uvicorn[standard]>=0.40.0",
]
